[tool.poetry]
name = "economy-x"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
domain = "^0.1.4"
pytest-firefox = "^0.1.1"
fire = "^0.4.0"
proxy-6 = "^1.1"
pip-faster = "^1.0rc6.dev4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
